<resources>

    <string name="facebook_app_id">461313697707364</string>
    <string name="fb_login_protocol_scheme">fb461313697707364</string>

    <string name="app_name">BookArcade</string>
    <string name="title_activity_home">Store</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="action_search">Search</string>
    <string name="action_cart">Cart</string>
    <string name="search_hint">Title/ISBN/Author</string>


    <string name="join_us">Join BookArcade</string>
    <string name="title_activity_example">ExampleActivity</string>
    <string name="title_home">Store Home</string>
    <string name="title_categories">Categories</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_profile">Profile</string>
    <string name="title_activity_main">MainActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="engineering">Engineering</string>
    <string name="medical">Medical</string>
    <string name="genres">Genres</string>
    <string name="authors">Authors</string>
    <string name="popular">Popular</string>
    <string name="trending">Trending</string>
    <string name="logout">Logout</string>
    <string name="nav_version">BookArcade v0.02-PreAlpha</string>
    <string name="book_name">Book Name</string>
    <string name="author_name">Author Name</string>
    <string name="mrp">MRP/-</string>
    <string name="price">PRC/-</string>
    <string name="book_image">Book Image</string>
    <string name="options">Options</string>
    <string name="section_name">Section Name</string>
    <string name="more">MORE</string>
    <string name="featured">Featured for the day</string>
    <string name="description">Description</string>
    <string name="spotlight">In the Spotlight</string>
    <string name="description_footer_image">Footer Image</string>
    <string name="publisher_name">Publisher Name</string>
    <string name="release_date">November 22, 2011</string>
    <string name="no_of_pages">400 Pages</string>
    <string name="isbn">ISBN: 123–1231231231</string>
    <string name="book_mrp">M.R.P - ₹ 415</string>
    <string name="purchase">Purchase</string>
    <string name="rent">Rent</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="about_the_book">About the book</string>
    <string name="read_more">READ MORE</string>
    <string name="about_the_author">About the author</string>
    <string name="_pages"> Pages</string>
    <string name="mrp_rupee">M.R.P - ₹</string>
    <string name="language_">Language: </string>
    <string name="isbn_">ISBN: </string>
    <string name="carousel_banner_item">Carousel Banner Item</string>
    <string name="rupee_symbol">₹</string>
    <string name="hyphen">-</string>
    <string name="cart_empty">Your shopping cart is empty.</string>
    <string name="cart_subtotal">Cart Subtotal:</string>
    <string name="checkout">Checkout</string>
    <string name="charges_applicable">(Delivery charges might be applicable)</string>
    <string name="cart_total">Cart total</string>
    <string name="estimated_delivery">Estimated Delivery</string>
    <string name="eta">2 to 5 days</string>
    <string name="discount">Discount</string>
    <string name="total">Total</string>
    <string name="shipping">Shipping</string>
    <string name="order_summary">Order Summary</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="display_name">Display Name</string>
    <string name="phone_number">+91 1234567890</string>
    <string name="change">Change</string>
    <string name="add_new">+ Add New</string>
    <string name="cash_on_delivery">Cash on Delivery</string>
    <string name="paytm_options">Paytm (Wallet/Card/Net Banking/UPI0)</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="my_orders">My Orders</string>
    <string name="address_book">Address Book</string>
    <string name="wallet">Wallet</string>
    <string name="wishlist">Wishlist</string>
    <string name="faq">FAQ</string>
    <string name="donate">Donate</string>
    <string name="about_us">About Us</string>
    <string name="proceed">Proceed</string>
    <string name="name">Name*</string>
    <string name="address_line_1">Address Line 1*</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="landmark">Landmark</string>
    <string name="mobile_10_digit_number">Mobile (10 Digit Number)*</string>
    <string name="pincode">Pincode*</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="karnataka">Karnataka</string>
    <string name="save_address">Save Address</string>
    <string name="bangalore">Bangalore</string>
    <string name="ph_">Ph:</string>
    <string name="landmark_">Landmark:</string>
    <string name="m_r_p">M.R.P</string>
    <string name="student_scheme">Student Scheme</string>
    <string name="donate_help_us">Donate/Help Us</string>
    <string name="suggest_a_book">Suggest a Book</string>
    <string name="share">Share</string>
    <string name="order_date">Order Date</string>
    <string name="order_id">Order #</string>
    <string name="orderid">1234567890</string>
    <string name="order_type">Order Type</string>
    <string name="order_status">Order Status</string>
    <string name="items">Items</string>
    <string name="shipping_charges">Shipping Charges</string>
    <string name="order_total">Order Total</string>
    <string name="order_details">Order Details</string>
    <string name="shipment_details">Shipment Details</string>
    <string name="shipment_items">Shipment Items</string>
    <string name="payment_information">Payment Information</string>
    <string name="payment_method">Payment Method</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="select_rental_duration">Select Rental Duration</string>
    <string name="initial_payable">Initial Payable</string>
    <string name="rent_payable">Rent Payable</string>
    <string name="refundable">Refundable</string>
    <string name="rent_duration">Rent Duration</string>
    <string name="delivery_date">Delivery Date</string>

    <string name="student_apply">Click below to apply for student membership in BookArcade and avail special offers, discounts and buy-back offers.</string>
    <string name="student_registered">We have received your application. Thank you for registering. You will soon be updated.</string>
    <string name="apply">Apply</string>
    <string name="course">Course</string>
    <string name="reg_number">Reg Number</string>
    <string name="college_name">College Name</string>
    <string name="membership">Membership</string>
    <string name="redeem_code">Redeem Code</string>
    <string name="feedback">Feedback</string>
    <string name="refer_student">Refer a Student</string>
    <string name="top_up_recharge">Top Up/Recharge</string>
    <string name="add_to_wishlist">Add to Wishlist</string>
    <string name="delete">Delete</string>

    <string-array name="rent_durations">
        <item>1 Month (30 days)</item>
        <item>2 Months (60 days)</item>
        <item>3 Months (90 days)</item>
        <item>4 Months (120 days)</item>
        <item>5 Months (150 days)</item>
        <item>6 Months (180 days)</item>
        <item>7 Months (210 days)</item>
        <item>8 Months (240 days)</item>
        <item>9 Months (270 days)</item>
        <item>10 Months (300 days)</item>
        <item>11 Months (330 days)</item>
        <item>12 Months (360 days)</item>
    </string-array>
    <string name="title_activity_orders">Your Orders</string>
    <string name="purchases">Purchases</string>
    <string name="rentals">Rentals</string>
    <string name="packages">Packages</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>
