<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_student"
            android:icon="@drawable/ic_student"
            android:title="@string/student_scheme" />
        <item
            android:id="@+id/nav_donate"
            android:icon="@drawable/ic_coffeemaker"
            android:title="@string/donate_help_us" />
        <item
            android:id="@+id/nav_suggest"
            android:icon="@drawable/ic_suggestion"
            android:title="@string/suggest_a_book" />
    </group>

    <item android:title="@string/options">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
