<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="33dp" />

    <ImageView
        android:id="@+id/img_book"
        android:layout_width="50dp"
        android:layout_height="70dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/book_image" />

    <TextView
        android:id="@+id/tv_book_title"
        android:layout_width="match_parent"
        android:layout_marginEnd="16dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="14dp"
        android:layout_toEndOf="@id/img_book"
        android:text="@string/book_name"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/tv_book_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="12sp"
        android:layout_below="@id/tv_book_title"
        android:layout_toEndOf="@id/img_book"
        android:text="@string/author_name" />

    <TextView
        android:id="@+id/tv_price"
        android:layout_toEndOf="@id/img_book"
        android:layout_below="@id/tv_book_author"
        android:layout_marginStart="8dp"
        android:text="@string/price"
        android:textColor="@color/colorAccent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_mrp"
        android:layout_toEndOf="@id/tv_price"
        android:layout_below="@id/tv_book_author"
        android:layout_marginStart="8dp"
        android:text="@string/mrp"
        android:textSize="12sp"
        android:layout_marginTop="2dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>

