<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    app:cardCornerRadius="2dp"
    app:cardElevation="2dp"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_display_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:text="@string/display_name"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_address1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_display_name"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_toStartOf="@id/btn_delete"
            android:text="@string/address"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_address2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_address1"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_toStartOf="@id/btn_delete"
            android:text="@string/address"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_address2"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/city"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_pincode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_address2"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_toEndOf="@id/tv_city"
            android:layout_toStartOf="@id/btn_delete"
            android:maxLines="1"
            android:text="@string/pincode"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_city"
            android:layout_marginStart="8dp"
            android:text="@string/phone_number"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_landmark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_phone"
            android:layout_marginBottom="4dp"
            android:layout_marginStart="8dp"
            android:text="@string/landmark"
            android:textSize="14sp" />

        <View
            android:id="@+id/view"
            android:layout_width="1dp"
            android:layout_height="30dp"
            android:layout_below="@id/tv_landmark"
            android:layout_centerHorizontal="true"
            android:background="@color/colorAccent" />

        <Button
            android:id="@+id/btn_change"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_below="@id/tv_landmark"
            android:layout_toStartOf="@id/view"
            android:background="@color/colorLight"
            android:text="@string/change"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary" />

        <Button
            android:id="@+id/btn_add"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_below="@id/tv_landmark"
            android:layout_toEndOf="@id/view"
            android:background="@color/colorLight"
            android:text="@string/add_new"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary" />

    </RelativeLayout>

</android.support.v7.widget.CardView>