<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="2dp"
    app:cardElevation="2dp"
    android:layout_margin="4dp"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_book"
            android:layout_width="120dp"
            android:layout_height="180dp"
            android:layout_marginBottom="2dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/book_image"
            android:scaleType="fitXY" />

        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_toEndOf="@id/img_book" />

        <TextView
            android:id="@+id/tv_book_title"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@id/view"
            android:gravity="center"
            android:text="@string/book_name"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/tv_book_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_book_title"
            android:layout_marginEnd="16dp"
            android:maxLines="6"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@id/view"
            android:gravity="center"
            android:text="@string/description"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_book_author"
            android:text="@string/author_name"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="8dp"
            android:textSize="14sp"
            android:layout_marginTop="4dp"
            android:layout_below="@id/tv_book_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_price"
            android:layout_alignBottom="@id/img_book"
            android:layout_marginBottom="8dp"
            android:text="@string/price"
            android:textSize="16sp"
            android:layout_marginEnd="32dp"
            android:layout_toStartOf="@id/tv_mrp"
            android:textColor="@color/colorAccent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <TextView
            android:id="@+id/tv_mrp"
            android:layout_alignBottom="@id/img_book"
            android:layout_marginBottom="8dp"
            android:text="@string/mrp"
            android:textSize="14sp"
            android:layout_marginEnd="8dp"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>

</android.support.v7.widget.CardView>