<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="2dp"
    android:layout_margin="4dp"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="2dp">

    <RelativeLayout
        android:layout_width="95dp"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_centerInParent="true"
            android:layout_marginBottom="30dp"
            style="?android:attr/progressBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageView
            android:contentDescription="@string/book_image"
            android:id="@+id/img_book"
            android:layout_width="95dp"
            android:layout_height="140dp"
            android:adjustViewBounds="true"
            android:scaleType="fitXY" />

        <TextView
            android:id="@+id/tv_book_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/img_book"
            android:minLines="4"
            android:maxLines="4"
            android:layout_marginStart="4dp"
            android:layout_marginTop="2dp"
            android:layout_toStartOf="@id/btn_options"
            android:text="@string/book_name"
            android:textColor="@android:color/black"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/tv_book_author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_book_title"
            android:layout_marginStart="4dp"
            android:maxLines="1"
            android:layout_toStartOf="@id/btn_options"
            android:text="@string/author_name"
            android:textSize="8sp" />

        <TextView
            android:id="@+id/tv_mrp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_book_author"
            android:layout_marginBottom="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="2dp"
            android:layout_toStartOf="@id/btn_options"
            android:text="@string/mrp"
            android:textSize="8sp" />

        <TextView
            android:id="@+id/tv_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_book_author"
            android:layout_marginBottom="4dp"
            android:layout_marginStart="4dp"
            android:text="@string/price"
            android:textColor="@color/colorAccent"
            android:textSize="10sp" />

        <ImageButton
            android:id="@+id/btn_options"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/img_book"
            android:layout_marginTop="16dp"
            android:background="@drawable/ic_dots"
            android:contentDescription="@string/options" />

    </RelativeLayout>

</android.support.v7.widget.CardView>